--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 
 <div id="game-window">
+    <div id="counter">0</div>
     <!-- <div id="main-menu">
         <div onclick="startGame()" id="start-button">start</div>
     </div> -->
